[package]
name = "canvas-scraper"
version = "0.1.0"
authors = ["Victor Quiroz Castro <victorhqc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33"
dotenv = "0.15"
dotenv_codegen = "0.15"
futures = "0.1"
log = "0.4"
pretty_env_logger = "0.2"
reqwest = "0.9.22"
scraper = "0.11.0"
select = "0.4.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.22"
url = "2.1"
